; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_distobject.c_GetDistributedObjectAddressList.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_distobject.c_GetDistributedObjectAddressList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@NIL = common dso_local global i32* null, align 8
@AccessShareLock = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetDistributedObjectAddressList() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i32*, align 8
  store i32* null, i32** %1, align 8
  store i32* null, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %7 = load i32*, i32** @NIL, align 8
  store i32* %7, i32** %4, align 8
  %8 = call i32 (...) @DistObjectRelationId()
  %9 = load i32, i32* @AccessShareLock, align 4
  %10 = call i32* @heap_open(i32 %8, i32 %9)
  store i32* %10, i32** %1, align 8
  %11 = load i32*, i32** %1, align 8
  %12 = load i32, i32* @InvalidOid, align 4
  %13 = call i32* @systable_beginscan(i32* %11, i32 %12, i32 0, i32* null, i32 0, i32* null)
  store i32* %13, i32** %2, align 8
  br label %14

14:                                               ; preds = %19, %0
  %15 = load i32*, i32** %2, align 8
  %16 = call i32* @systable_getnext(i32* %15)
  store i32* %16, i32** %3, align 8
  %17 = call i64 @HeapTupleIsValid(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %40

19:                                               ; preds = %14
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @GETSTRUCT(i32* %20)
  %22 = sext i32 %21 to i64
  %23 = inttoptr i64 %22 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %23, %struct.TYPE_2__** %5, align 8
  %24 = call i32* @palloc0(i32 4)
  store i32* %24, i32** %6, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @ObjectAddressSubSet(i32 %26, i32 %29, i32 %32, i32 %35)
  %37 = load i32*, i32** %4, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = call i32* @lappend(i32* %37, i32* %38)
  store i32* %39, i32** %4, align 8
  br label %14

40:                                               ; preds = %14
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @systable_endscan(i32* %41)
  %43 = load i32*, i32** %1, align 8
  %44 = load i32, i32* @AccessShareLock, align 4
  %45 = call i32 @relation_close(i32* %43, i32 %44)
  %46 = load i32*, i32** %4, align 8
  ret i32* %46
}

declare dso_local i32* @heap_open(i32, i32) #1

declare dso_local i32 @DistObjectRelationId(...) #1

declare dso_local i32* @systable_beginscan(i32*, i32, i32, i32*, i32, i32*) #1

declare dso_local i64 @HeapTupleIsValid(i32*) #1

declare dso_local i32* @systable_getnext(i32*) #1

declare dso_local i32 @GETSTRUCT(i32*) #1

declare dso_local i32* @palloc0(i32) #1

declare dso_local i32 @ObjectAddressSubSet(i32, i32, i32, i32) #1

declare dso_local i32* @lappend(i32*, i32*) #1

declare dso_local i32 @systable_endscan(i32*) #1

declare dso_local i32 @relation_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
